# company_analysis

./: .gitlab-ci.yml  README.md  liukuluvut.txt  lotto.txt  nimet.txt  pyproject.toml  sukunimet.txt  yritystiedot_eini.csv
L01/: L01T01.py  L01T02.py  L01T03.py  L01T04.py  L01T05.py
L02/: L02T01.py  L02T02.py  L02T03.py  L02T04.py  L02T05.py
L03/: L03T01.py  L03T02.py  L03T03.py  L03T04.py  L03T05.py
L04/: L04T01.py  L04T02.py  L04T03.py  L04T04.py  L04T05.py
L05/: L05T01.py  L05T02.py  L05T03.py  L05T04.py  L05T05.py
L06/: L06T01.py  L06T02.py  L06T03.py  L06T04.py  L06T05.py
L07/: L07T01.py  L07T02.py  L07T03.py  L07T04.py  L07T05.py
L08/: L08T01.py  L08T02.py  L08T03.py  L08T04.py  L08T05.py
L09/: L09T01.py  L09T02.py  L09T03.py  L09T04.py  L09T05.py
L10/: L10T01.py  L10T02.py  L10T03.py  L10T04.py  L10T05.py
sourcett00cd77-exercises-AF1916examples/: Hello Python
